--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<p style = "text-align: center">Hello! I'm a dedicated and enthusiastic software engineer with deep love for the world of technology. 
 					I'm on a mission to harness the power of code to create innovative solutions that make a positive impact on people's lives. I thrive in collaborative environments, valuing teamwork and effective communication. <br><br>
 					
-					My experience in technology includes five years of professional expertise in software engineering and cloud development. 
+					My experience in technology includes 5 years of professional expertise in software engineering and cloud development. 
 				Currently pursuing a Master's in Computer Science at Northeastern University, Boston, I recognize the importance of continuous learning in this rapidly evolving world. 
 					I'm committed to staying updated with the latest technologies, best practices, and industry trends to ensure that I can make a meaningful impact in the ever-changing landscape of software engineering. <br>
                                 <ul style = "text-align: center; list-style: none">
@@ -156,7 +156,7 @@
 
 								<button type = "button" disabled>Go Programming</button>
 								<button type = "button" disabled>Java</button>
-								<button type = "button" disabled>C++</button>
+								<button type = "button" disabled>Python</button>
 
 								<button type = "button" disabled>HTML</button>
 								<button type = "button" disabled>CSS</button>
