--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">About</a></li>
+							<li><a href="#intro">About Me</a></li>
 							<li><a href="#one">Experience</a></li>
 							<li><a href="#two">Education</a></li>
 							<li><a href="#three">Blogs</a></li>
-							<li><a href="#four">Skills</a></li>
-							<li><a href="#five">Contact</a></li>
+							<li><a href="#four">Projects</a></li>
+							<li><a href="#five">Skills</a></li>
+							<li><a href="#six">Contact</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -47,7 +48,7 @@
 				Currently pursuing a Master's in Computer Science at Northeastern University, Boston, I recognize the importance of continuous learning in this rapidly evolving world. 
 					I'm committed to staying updated with the latest technologies, best practices, and industry trends to ensure that I can make a meaningful impact in the ever-changing landscape of software engineering. <br>
                                 <ul style = "text-align: center; list-style: none">
-                                <li><a href="https://drive.google.com/file/d/1H1k6LpmbiKOOenaFEz6UwcB-BU5nCapf/view?usp=sharing" class="button scrolly">View Resume</a></li>
+                                <li><a href="https://drive.google.com/file/d/1kqOq_CQulKzFibdr_P1qJq3HH0FFWjwT/view?usp=sharing" class="button scrolly">View Resume</a></li>
 							</ul>
 						</div>
 
@@ -148,7 +149,7 @@
                                        </section>
 
 					<!-- four -->
-						<section id="four" class="wrapper style2 spotlights">
+						<section id="five" class="wrapper style2 spotlights">
 								<h2 style = "text-align: center"><br />Skills</h2>
 
 							<div class = "inner">
@@ -189,7 +190,7 @@
 						</section>
 
 				<!-- five -->
-					<section id="five" class="wrapper style3 fade-up">
+					<section id="six" class="wrapper style3 fade-up">
 						<div class = "inner">
 							<div>
 							<h2 style = "text-align: center">Contact</h2>
