--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
 								<div class="inner">
 									<h3>Cloud Developer II</h3>
 									<h4>Hewlett Packard Enterprise</h4>
-                                                                GreenLake Cloud Services R&D Department<br><br>
+                                                                GreenLake Cloud Services R&D Department<br>
 		  						Jun 2021 - Aug 2023<br><br>
 
-									<p> I received Star Point recognition three times during my tenure, for "Commit and Go" attitude in getting the deliverables developed, deployed and tested within the committed timeline. I worked for over a year in "Containers as a Service on Baremetal" project. 
+									<p> I received Star Point recognition three times during my tenure, for "Commit and Go" attitude in getting the deliverables developed, deployed and tested within the committed timeline. <br><br> I worked for over a year in "Containers as a Service on Baremetal" project. 
 										I was involved in the requirements analysis, software design of the on-premise and SaaS components, code development, unit and functional testing, 
 										and deploying the components in development and production environments. Extensively used GitHub and DevOps tools to maintain multiple iterations of the code as it went through multiple enhancements. I gave sprint demos and was actively a part of
-										design and defect resolution discussions with the dependent teams, leads and architects. I also engineered user-friendly terraform providers to perform create, delete and scale operations on Kubernetes clusters, and wrote blogs reagrding the same to enable customers better undertand it.</p>
+										design and defect resolution discussions with the dependent teams, leads and architects. <br><br> I engineered user-friendly terraform providers to perform create, delete and scale operations on Kubernetes clusters, and wrote blogs regarding the same to enable customers better undertand it.</p>
 									<p> I was a member of the GreenLake Fun Team and had the privilege of emceeing and hosting numerous events at Hewlett Packard Enterprise. </p>
 										
 								</div>
@@ -89,7 +89,7 @@
 								<div class="inner">
 									<h3>Systems Engineer</h3>
 									<h4>Tata Consultancy Services</h4>
-                                                                IOT Department (Client: Nielsen Holdings)<br><br>
+                                                                IOT Department (Client: Nielsen Holdings)<br>
 		  						Oct 2018 - Jun 2021<br><br>
 									<p> I implemented an efficient data monitoring and uploading system using Kafka streaming and AWS S3 storage buckets, complemented by monitoring through Athena queries. This initiative led to an impressive 
 										16% improvement in data processing times. Lastly, I contributed to the development of extensive functional tests for applications written in Go and Java, employing the Cucumber framework and Mockito to enhance the testing process.</p>
