--- a/index.html
+++ b/index.html
@@ -116,15 +116,14 @@
 								<div class="inner">
 									<h3>Northeastern University, Boston, MA</h3>
 									<h4>Master of Science in Computer Science</h4>
-									Sep 2023 - Exp. May 2025<br>
-									<p>Related Courses: Programming Design Paradigm, Algorithms, Database Management Systems, Web Development. <br><br> </p>
+									Sep 2023 - May 2025
 								</div>
 
 								<div class="inner">
 									<h3>Dr. Ambedkar Institute of Technology, Bengaluru, India</h3>
 									<h4>Bachelor of Engineering in Computer Science and Engineering</h4>
 									Aug 2014 - Aug 2018<br>
-									<p>Related Courses: Data Structures & Algorithm Design, DBMS, Compiler Design, Cloud Computing, OOPs <br> GPA: 4.0 </p>
+									GPA: 4.0
 								<hr>
 								</div>
 							</div>
