--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 								<div class="inner">
 									<h3>Northeastern University, Boston, MA</h3>
 									<h4>Master of Science in Computer Science</h4>
-									Sep 2023 - May 2025
+									Sep 2023 - May 2025 <br><br>
 								</div>
 
 								<div class="inner">
@@ -141,11 +141,21 @@
 						
 						<div class="content">
 								<div class="inner">
-									<section>
-										<a href="https://developer.hpe.com/blog/kubernetes-clusters-as-code-part1/" ><font style = "font-family: sans-serif"> Kubernetes Cluster as Code - Part 1</font></a><br />
-										<a href="https://developer.hpe.com/blog/kubernetes-cluster-as-code-part-2/" ><font style = "font-family: sans-serif"> Kubernetes Cluster as Code - Part 2</font></a><br />
-									</section>
-								</div>  
+        								<section>
+            									<ul>
+               										 <li>
+                   										 <a href="https://developer.hpe.com/blog/kubernetes-clusters-as-code-part1/">
+                    										    <font style="font-family: sans-serif">Kubernetes Cluster as Code - Part 1</font>
+                   										 </a>
+               										 </li>
+                									 <li>
+                   										 <a href="https://developer.hpe.com/blog/kubernetes-cluster-as-code-part-2/">
+                      										  <font style="font-family: sans-serif">Kubernetes Cluster as Code - Part 2</font>
+                    										</a>
+              										  </li>
+           									 </ul>
+      									  </section>
+   								 </div>
 						</div>
                                        </section>
 
