--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				</section>
 
 				<!-- two -->
-				<section id="two" class="wrapper style2 spotlights">
+				<section id="two" class="wrapper style1 spotlights">
 
 					<div class = "inner">
 						<div>
@@ -154,7 +154,36 @@
                                  </section>
 
 				<!-- four -->
-				<section id="five" class="wrapper style2 spotlights">
+                                 <section id="four" class="wrapper style1 spotlights">
+					<div class = "inner">
+						<div>
+							<h2 style = "text-align: center">Projects</h2>
+						</div>
+					</div>
+					<section>	
+					<div class="content">
+						<div class="inner">
+            						<h4>Smart City Management System</h4>
+                                                                <p> Developed a user-friendly Flask-based web app with SQL Server, enabling city administrators and citizens to manage smart city components such as surveillance cameras, sensors, WiFi zones, and smart signals. 
+									Enabled visualization and report generation on the GUI for the smart city data.<br><br></p>
+							<h4>Load Balancer Manager</h4>
+                                                                <p> Implemented dynamic Nginx load balancer deployment, updating configurations to enhance security and eliminate the need for SSH credentials. 
+									Developed REST API calls for load balancer creation, configuration updates, IP address retrieval, and deletion.<br><br></p>
+							<h4>Containers as a Service on BareMetal</h4>
+                                                                <p> Engineered Go code for enabling users to effortlessly create, delete, and scale BareMetal clusters (KVM master, bare metal worker).
+								Collaborated with a resource orchestrator layer to facilitate essential API calls for deploying bare metal and KVM nodes. Implemented a controller that continually polled the cluster status and reported updates through the GUI to the users. <br><br></p>
+							<h4>Human Intruder Detection System</h4>
+                                                                <p> Designed a robust security solution to enhance safety and protect sensitive areas by automatically identifying and alerting authorities to unauthorized human presence.
+								Installed Raspberry Pi with motion detectors and video cameras for remote surveillance, reducing security response time by 20%. <br><br></p>
+							<h4>Bank Management System</h4>
+                                                                <p> Implemented a scalable MySQL-based bank customer DBMS with comprehensive features, facilitating streamlined operations by simplifying customer transactions and enhancing overall efficiency.<br><br></p>
+   						</div>
+					</div>
+					</section>
+                                 </section>
+
+				<!-- five -->
+				<section id="five" class="wrapper style1 spotlights">
 					<h2 style = "text-align: center"><br />Skills</h2>
 
 						<div class = "inner">
@@ -194,7 +223,7 @@
 
 				</section>
 
-				<!-- five -->
+				<!-- six -->
 				<section id="six" class="wrapper style3 fade-up">
 					<div class = "inner">
 						<div>
