--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                 />
                 <div>
                   <h3>AWS</h3>
-                  <p>Advanced</p>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
@@ -341,6 +341,17 @@
                 />
                 <div>
                   <h3>HPE Greenlake Cloud</h3>
+                  <p>Advanced</p>
+                </div>
+              </article>
+	      <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Salesforce</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
