--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               />
               <h3>Experience</h3>
               <h4>5 years</h4>
-              <p>Systems Engineer - Tata Consultancy Services <br /> Cloud Developer II - Hewlett Packard Enterprise </p>
+              <p>Cloud Developer II - Hewlett Packard Enterprise (2021-2023) <br /> Systems Engineer - Tata Consultancy Services (2018-2021) </p>
             </div>
             <div class="details-container">
               <img
@@ -105,7 +105,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>Bachelor's in Computer Science & Engineering<br />Master's in Computer Science</p>
+              <p>Master's in Computer Science (2023-2025) <br />Bachelor's in Computer Science & Engineering (2014-2018) </p>
             </div>
           </div>
           <div class="text-container">
@@ -280,7 +280,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Javascript</h3>
+                  <h3>JavaScript</h3>
                   <p>Advanced</p>
                 </div>
               </article>
@@ -291,8 +291,19 @@
                   class="icon"
                 />
                 <div>
-                  <h3>REST API</h3>
+                  <h3>React</h3>
                   <p>Advanced</p>
+                </div>
+              </article>
+	      <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>TypeScript</h3>
+                  <p>Intermediate</p>
                 </div>
               </article>
             </div>
@@ -330,7 +341,7 @@
                 />
                 <div>
                   <h3>AWS</h3>
-                  <p>Intermediate</p>
+                  <p>Advanced</p>
                 </div>
               </article>
 	      <article>
