--- a/index.html
+++ b/index.html
@@ -306,6 +306,17 @@
                   <p>Intermediate</p>
                 </div>
               </article>
+	      <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>REST API</h3>
+                  <p>Advanced</p>
+                </div>
+              </article>
             </div>
           </div>
           <div class="details-container">
@@ -367,7 +378,7 @@
       />
     </section>
     <section id="projects">
-      <p class="section__text__p1">Browse My Recent</p>
+      <p class="section__text__p1">Here Are My Recent</p>
       <h1 class="title">Projects</h1>
       <div class="experience-details-container">
         <div class="about-containers">
