--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
           <div class="text-container">
             <p>
                 Hello! I'm a dedicated and enthusiastic software engineer with deep love for the world of technology. 
-								I'm on a mission to harness the power of code to create innovative solutions that make a positive impact on people's lives. I thrive in collaborative environments, valuing teamwork and effective communication. <br><br>
-					
-								My experience in technology includes 5 years of professional expertise in software engineering and cloud development. 
-								Currently pursuing a Master's in Computer Science at Northeastern University, Boston, I recognize the importance of continuous learning in this rapidly evolving world. 
-								I'm committed to staying updated with the latest technologies, best practices, and industry trends to ensure that I can make a meaningful impact in the ever-changing landscape of software engineering. <br>
-                                				<ul style = "text-align: center; list-style: none">
+		I have 5 years of professional expertise in software engineering and cloud development. 
+		I thrive in collaborative environments, valuing teamwork and effective communication. <br><br>
+		    
+		Currently pursuing Master's in Computer Science at Northeastern University, Boston, I recognize the importance of continuous learning in this rapidly evolving world.
+		I'm committed to staying updated with the latest technologies, best practices, and industry trends to ensure that I can make a meaningful impact in the ever-changing landscape of software engineering. <br>						
+                <ul style = "text-align: center; list-style: none">
             </p>
           </div>
         </div>
@@ -165,7 +165,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Git</h3>
+                  <h3>Python</h3>
                   <p>Advanced</p>
                 </div>
               </article>
@@ -198,6 +198,17 @@
                   class="icon"
                 />
                 <div>
+                  <h3>Git</h3>
+                  <p>Advanced</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
                   <h3>JUnit</h3>
                   <p>Advanced</p>
                 </div>
@@ -209,19 +220,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Python</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
                   <h3>Cucumber</h3>
-                  <p>Intermediate</p>
+                  <p>Advanced</p>
                 </div>
               </article>
               <article>
@@ -231,7 +231,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Apache Kafka</h3>
+                  <h3>Kafka</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
