--- a/index.html
+++ b/index.html
@@ -368,6 +368,8 @@
               </article>
             </div>
           </div>
+	</div>
+	<div class="about-containers">
 	<div class="details-container">
             <h2 class="experience-sub-title">Databases & Storage</h2>
             <div class="article-container">
