--- a/index.html
+++ b/index.html
@@ -604,6 +604,8 @@
                      Implemented a controller that continually polled the cluster status and reported updates through the GUI to the users.
                   </p>
                </div>
+            </div>
+            <div class="about-containers">
                <div class="details-container color-container">
                   <div class="article-container">
                      <img
