--- a/index.html
+++ b/index.html
@@ -603,6 +603,7 @@
                   <p> Engineered Go code for enabling users to effortlessly create, delete, and scale BareMetal clusters. <br /> <br /> <br />
                      Implemented a controller that continually polled the cluster status and reported updates through the GUI to the users.
                   </p>
+               </div>
                <div class="details-container color-container">
                   <div class="article-container">
                      <img
