--- a/index.html
+++ b/index.html
@@ -186,17 +186,6 @@
                            class="icon"
                            />
                         <div>
-                           <h3>SQL</h3>
-                           <p>Advanced</p>
-                        </div>
-                     </article>
-                     <article>
-                        <img
-                           src="./assets/checkmark.png"
-                           alt="Experience icon"
-                           class="icon"
-                           />
-                        <div>
                            <h3>Git</h3>
                            <p>Advanced</p>
                         </div>
@@ -221,17 +210,6 @@
                         <div>
                            <h3>Cucumber</h3>
                            <p>Advanced</p>
-                        </div>
-                     </article>
-                     <article>
-                        <img
-                           src="./assets/checkmark.png"
-                           alt="Experience icon"
-                           class="icon"
-                           />
-                        <div>
-                           <h3>Kafka</h3>
-                           <p>Intermediate</p>
                         </div>
                      </article>
                      <article>
@@ -430,7 +408,7 @@
                   </div>
                </div>
                <div class="details-container">
-                  <h2 class="experience-sub-title">DevOps</h2>
+                  <h2 class="experience-sub-title">DevOps & Streaming</h2>
                   <div class="article-container">
                      <article>
                         <img
@@ -484,6 +462,17 @@
                            />
                         <div>
                            <h3>ArgoCD</h3>
+                           <p>Intermediate</p>
+                        </div>
+                     </article>
+                     <article>
+                        <img
+                           src="./assets/checkmark.png"
+                           alt="Experience icon"
+                           class="icon"
+                           />
+                        <div>
+                           <h3>Kafka</h3>
                            <p>Intermediate</p>
                         </div>
                      </article>
