--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                            class="icon"
                            />
                         <div>
-                           <h3>AWS S3</h3>
+                           <h3>S3</h3>
                            <p>Advanced</p>
                         </div>
                      </article>
@@ -390,7 +390,7 @@
                            class="icon"
                            />
                         <div>
-                           <h3>AWS DynamoDB</h3>
+                           <h3>DynamoDB</h3>
                            <p>Intermediate</p>
                         </div>
                      </article>
