--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         />
                      <h3>Experience</h3>
                      <h4>5 years</h4>
-                     <p>Cloud Developer II - Hewlett Packard Enterprise (2021-2023) <br /> Systems Engineer - Tata Consultancy Services (2018-2021) </p>
+                     <p>Software Engineering Co-op - Mercari <br /> Cloud Developer II - Hewlett Packard Enterprise <br /> Systems Engineer - Tata Consultancy Services (2018-2021) </p>
                   </div>
                   <div class="details-container">
                      <img
@@ -105,16 +105,13 @@
                         class="icon"
                         />
                      <h3>Education</h3>
-                     <p>Master's in Computer Science (2023-2025) <br />Bachelor's in Computer Science & Engineering (2014-2018) </p>
+                     <p>Master's in Computer Science <br />Bachelor's in Computer Science & Engineering </p>
                   </div>
                </div>
                <div class="text-container">
                   <p>
-                     Hello! I'm a dedicated and enthusiastic software engineer with deep love for the world of technology. 
-                     I have 5 years of professional expertise in software engineering and cloud development. 
-                     I thrive in collaborative environments, valuing teamwork and effective communication. <br><br>
-                     Currently pursuing Master's in Computer Science at Northeastern University, Boston, I recognize the importance of continuous learning in this rapidly evolving world.
-                     I'm committed to staying updated with the latest technologies, best practices, and industry trends to ensure that I can make a meaningful impact in the ever-changing landscape of software engineering. <br>						
+                     Hi there! 👋 I'm a software engineer with 5+ years of experience building innovative solutions in cloud and tech. I thrive on collaboration, teamwork, and staying ahead of the curve in this ever-evolving field.
+                     Currently pursuing my Master’s in Computer Science at Northeastern University, I’m passionate about learning, growing, and making an impact in the world of software engineering. Let’s create something awesome together! 🚀✨ <br>						
                   <ul style = "text-align: center; list-style: none">
                   </p>
                </div>
