--- a/index.html
+++ b/index.html
@@ -75,48 +75,59 @@
             </div>
          </div>
       </section>
-      <section id="about">
-         <p class="section__text__p1">Get To Know More</p>
-         <h1 class="title">About Me</h1>
-         <div class="section-container">
-            <div class="section__pic-container">
-               <img
-                  src="./assets/3.png"
-                  alt="Profile picture"
-                  class="about-pic"
-                  />
-            </div>
-            <div class="about-details-container">
-               <div class="about-containers">
-                  <div class="details-container">
-                     <img
-                        src="./assets/experience.png"
-                        alt="Experience icon"
-                        class="icon"
-                        />
-                     <h3>Experience</h3>
-                     <h4>5 years</h4>
-                     <p>Software Engineering Co-op - Mercari <br /> Cloud Developer II - Hewlett Packard Enterprise <br /> Systems Engineer - Tata Consultancy Services (2018-2021) </p>
-                  </div>
-                  <div class="details-container">
-                     <img
-                        src="./assets/education.png"
-                        alt="Education icon"
-                        class="icon"
-                        />
-                     <h3>Education</h3>
-                     <p>Master's in Computer Science <br />Bachelor's in Computer Science & Engineering </p>
-                  </div>
-               </div>
-               <div class="text-container">
-                  <p>
-                     Hi there! 👋 I'm a software engineer with 5+ years of experience building innovative solutions in cloud and tech. I thrive on collaboration, teamwork, and staying ahead of the curve in this ever-evolving field.
-                     Currently pursuing my Master’s in Computer Science at Northeastern University, I’m passionate about learning, growing, and making an impact in the world of software engineering. Let’s create something awesome together! 🚀✨ <br>						
-                  <ul style = "text-align: center; list-style: none">
-                  </p>
-               </div>
-            </div>
-         </div>
+<section id="about">
+  <p class="section__text__p1">Get To Know More</p>
+  <h1 class="title">About Me</h1>
+  <div class="section-container">
+    <div class="section__pic-container">
+      <img
+        src="./assets/3.png"
+        alt="Profile picture"
+        class="about-pic"
+      />
+    </div>
+    <div class="about-details-container">
+      <div class="about-containers">
+        <div class="details-container">
+          <img
+            src="./assets/experience.png"
+            alt="Experience icon"
+            class="icon"
+          />
+          <h3>Experience</h3>
+          <h4>5 years</h4>
+          <p>
+            Software Engineering Co-op - Mercari <br />
+            Cloud Developer II - Hewlett Packard Enterprise <br />
+            Systems Engineer - Tata Consultancy Services (2018-2021)
+          </p>
+        </div>
+        <div class="details-container">
+          <img
+            src="./assets/education.png"
+            alt="Education icon"
+            class="icon"
+          />
+          <h3>Education</h3>
+          <p>
+            Master's in Computer Science <br />
+            Bachelor's in Computer Science & Engineering
+          </p>
+        </div>
+      </div>
+      <div class="text-container">
+        <p>
+          Hi there! 👋 I'm a software engineer with 5+ years of experience
+          building innovative solutions in cloud and tech. I thrive on
+          collaboration, teamwork, and staying ahead of the curve in this
+          ever-evolving field. Currently pursuing my Master’s in Computer
+          Science at Northeastern University, I’m passionate about learning,
+          growing, and making an impact in the world of software engineering.
+          Let’s create something awesome together! 🚀✨
+        </p>
+      </div>
+    </div>
+  </div>
          <img
             src="./assets/arrow.png"
             alt="Arrow icon"
