--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
             class="icon"
           />
           <h3>Experience</h3>
-          <h4>5 years</h4>
+          <h4>5+ years</h4>
           <p>
-            Software Engineering Co-op - Mercari <br />
+            Software Engineering Co-op - Mercari US <br />
             Cloud Developer II - Hewlett Packard Enterprise <br />
-            Systems Engineer - Tata Consultancy Services (2018-2021)
+            Systems Engineer - Tata Consultancy Services
           </p>
         </div>
         <div class="details-container">
@@ -111,7 +111,7 @@
           <h3>Education</h3>
           <p>
             Master's in Computer Science <br />
-            Bachelor's in Computer Science & Engineering
+            Bachelor's in Computer Science
           </p>
         </div>
       </div>
@@ -120,7 +120,8 @@
           Hi there! 👋 I'm a software engineer with 5+ years of experience
           building innovative solutions in cloud and tech. I thrive on
           collaboration, teamwork, and staying ahead of the curve in this
-          ever-evolving field. Currently pursuing my Master’s in Computer
+          ever-evolving field. <br />
+          Currently pursuing my Master’s in Computer
           Science at Northeastern University, I’m passionate about learning,
           growing, and making an impact in the world of software engineering.
           Let’s create something awesome together! 🚀✨
