--- a/index.html
+++ b/index.html
@@ -110,21 +110,22 @@
           />
           <h3>Education</h3>
           <p>
-            Master's in Computer Science <br />
-            Bachelor's in Computer Science
+            Master's in Computer Science - Khoury College of Computer Sciences <br />
+            Bachelor's in Computer Science - Dr.Ambedkar Institute of Technology
           </p>
         </div>
       </div>
       <div class="text-container">
         <p>
-          Hi there! 👋 I'm a software engineer with 5+ years of experience
+          Hi there! 👋  <br />
+          I'm a software engineer with 5+ years of experience
           building innovative solutions in cloud and tech. I thrive on
           collaboration, teamwork, and staying ahead of the curve in this
-          ever-evolving field. <br />
+          ever-evolving field. <br /> <br />
           Currently pursuing my Master’s in Computer
           Science at Northeastern University, I’m passionate about learning,
           growing, and making an impact in the world of software engineering.
-          Let’s create something awesome together! 🚀✨
+          Let’s create something awesome together! 🚀✨ 
         </p>
       </div>
     </div>
