--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <h3>Education</h3>
           <p>
             Master's in Computer Science - Khoury College of Computer Sciences <br />
-            Bachelor's in Computer Science - Dr.Ambedkar Institute of Technology
+            Bachelor's in Computer Science - Dr. Ambedkar Institute of Technology
           </p>
         </div>
       </div>
@@ -121,7 +121,7 @@
           I'm a software engineer with 5+ years of experience
           building innovative solutions in cloud and tech. I thrive on
           collaboration, teamwork, and staying ahead of the curve in this
-          ever-evolving field. <br /> <br />
+          ever-evolving field. <br /> 
           Currently pursuing my Master’s in Computer
           Science at Northeastern University, I’m passionate about learning,
           growing, and making an impact in the world of software engineering.
