--- a/index.html
+++ b/index.html
@@ -146,133 +146,30 @@
              <div class="article-container">
                <article>
                  <img src="./assets/golang-logo.png" alt="GoLang Logo" class="skill-logo" />
-                 <p>GoLang</p>
                </article>
                <article>
                  <img src="./assets/java-logo.png" alt="Java Logo" class="skill-logo" />
-                 <p>Java</p>
                </article>
                <article>
                  <img src="./assets/python-logo.png" alt="Python Logo" class="skill-logo" />
-                 <p>Python</p>
                </article>
                <article>
                  <img src="./assets/bash-logo.png" alt="Bash Logo" class="skill-logo" />
-                 <p>Bash</p>
                </article>
                <article>
                  <img src="./assets/git-logo.png" alt="Git Logo" class="skill-logo" />
-                 <p>Git</p>
                </article>
                <article>
                  <img src="./assets/junit-logo.png" alt="JUnit Logo" class="skill-logo" />
-                 <p>JUnit</p>
                </article>
                <article>
                  <img src="./assets/cucumber-logo.png" alt="Cucumber Logo" class="skill-logo" />
-                 <p>Cucumber</p>
                </article>
+               <article>
+                  <img src="./assets/cypress-logo.png" alt="Cypress Logo" class="skill-logo" />
+                </article>
                <article>
                  <img src="./assets/terraform-logo.png" alt="Terraform Logo" class="skill-logo" />
-                 <p>Terraform</p>
-               </article>
-             </div>
-           </div>
-       
-           <!-- Frontend Development -->
-           <div class="details-container">
-             <h2 class="experience-sub-title">Frontend Development</h2>
-             <div class="article-container">
-               <article>
-                 <img src="./assets/html-logo.png" alt="HTML Logo" class="skill-logo" />
-                 <p>HTML</p>
-               </article>
-               <article>
-                 <img src="./assets/css-logo.png" alt="CSS Logo" class="skill-logo" />
-                 <p>CSS</p>
-               </article>
-               <article>
-                 <img src="./assets/javascript-logo.png" alt="JavaScript Logo" class="skill-logo" />
-                 <p>JavaScript</p>
-               </article>
-               <article>
-                 <img src="./assets/react-logo.png" alt="React Logo" class="skill-logo" />
-                 <p>React</p>
-               </article>
-               <article>
-                 <img src="./assets/typescript-logo.png" alt="TypeScript Logo" class="skill-logo" />
-                 <p>TypeScript</p>
-               </article>
-               <article>
-                 <img src="./assets/rest-api-logo.png" alt="REST API Logo" class="skill-logo" />
-                 <p>REST API</p>
-               </article>
-             </div>
-           </div>
-       
-           <!-- Cloud Development -->
-           <div class="details-container">
-             <h2 class="experience-sub-title">Cloud Development</h2>
-             <div class="article-container">
-               <article>
-                 <img src="./assets/docker-logo.png" alt="Docker Logo" class="skill-logo" />
-                 <p>Docker</p>
-               </article>
-               <article>
-                 <img src="./assets/kubernetes-logo.png" alt="Kubernetes Logo" class="skill-logo" />
-                 <p>Kubernetes</p>
-               </article>
-               <article>
-                 <img src="./assets/aws-logo.png" alt="AWS Logo" class="skill-logo" />
-                 <p>AWS</p>
-               </article>
-               <article>
-                 <img src="./assets/gcp-logo.png" alt="Google Cloud Platform Logo" class="skill-logo" />
-                 <p>Google Cloud Platform</p>
-               </article>
-             </div>
-           </div>
-         </div>
-       </section>
-       <section id="experience">
-         <p class="section__text__p1">Explore My</p>
-         <h1 class="title">Experience</h1>
-         <div class="experience-details-container">
-           <!-- Backend Development -->
-           <div class="details-container">
-             <h2 class="experience-sub-title">Backend Development</h2>
-             <div class="article-container">
-               <article>
-                 <img src="./assets/golang-logo.png" alt="GoLang Logo" class="skill-logo" />
-                 <p>GoLang</p>
-               </article>
-               <article>
-                 <img src="./assets/java-logo.png" alt="Java Logo" class="skill-logo" />
-                 <p>Java</p>
-               </article>
-               <article>
-                 <img src="./assets/python-logo.png" alt="Python Logo" class="skill-logo" />
-                 <p>Python</p>
-               </article>
-               <article>
-                 <img src="./assets/bash-logo.png" alt="Bash Logo" class="skill-logo" />
-                 <p>Bash</p>
-               </article>
-               <article>
-                 <img src="./assets/git-logo.png" alt="Git Logo" class="skill-logo" />
-                 <p>Git</p>
-               </article>
-               <article>
-                 <img src="./assets/junit-logo.png" alt="JUnit Logo" class="skill-logo" />
-                 <p>JUnit</p>
-               </article>
-               <article>
-                 <img src="./assets/cucumber-logo.png" alt="Cucumber Logo" class="skill-logo" />
-                 <p>Cucumber</p>
-               </article>
-               <article>
-                 <img src="./assets/terraform-logo.png" alt="Terraform Logo" class="skill-logo" />
-                 <p>Terraform</p>
                </article>
              </div>
            </div>
