Update experience section

--- a/index.html
+++ b/index.html
@@ -180,27 +180,21 @@
              <div class="article-container">
                <article>
                  <img src="./assets/html-logo.png" alt="HTML Logo" class="skill-logo" />
-                 <p>HTML</p>
                </article>
                <article>
                  <img src="./assets/css-logo.png" alt="CSS Logo" class="skill-logo" />
-                 <p>CSS</p>
                </article>
                <article>
                  <img src="./assets/javascript-logo.png" alt="JavaScript Logo" class="skill-logo" />
-                 <p>JavaScript</p>
                </article>
                <article>
                  <img src="./assets/react-logo.png" alt="React Logo" class="skill-logo" />
-                 <p>React</p>
                </article>
                <article>
                  <img src="./assets/typescript-logo.png" alt="TypeScript Logo" class="skill-logo" />
-                 <p>TypeScript</p>
                </article>
                <article>
                  <img src="./assets/rest-api-logo.png" alt="REST API Logo" class="skill-logo" />
-                 <p>REST API</p>
                </article>
              </div>
            </div>
@@ -211,20 +205,19 @@
              <div class="article-container">
                <article>
                  <img src="./assets/docker-logo.png" alt="Docker Logo" class="skill-logo" />
-                 <p>Docker</p>
                </article>
                <article>
                  <img src="./assets/kubernetes-logo.png" alt="Kubernetes Logo" class="skill-logo" />
-                 <p>Kubernetes</p>
                </article>
                <article>
                  <img src="./assets/aws-logo.png" alt="AWS Logo" class="skill-logo" />
-                 <p>AWS</p>
                </article>
                <article>
                  <img src="./assets/gcp-logo.png" alt="Google Cloud Platform Logo" class="skill-logo" />
-                 <p>Google Cloud Platform</p>
                </article>
+               <article>
+                  <img src="./assets/hpe-logo.png" alt="HPE GreenLake Logo" class="skill-logo" />
+                </article>
              </div>
            </div>
          </div>
