--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
     <section id="experience">
       <p class="section__text__p1">Explore My</p>
       <h1 class="title">Experience</h1>
-      <div class="experience-details-container">
+
+      <div class="experience-details-grid">
         <!-- Backend Development -->
         <div class="details-container">
           <h2 class="experience-sub-title">Backend Development</h2>
@@ -188,13 +189,6 @@
               <img
                 src="./assets/cucumber-logo.png"
                 alt="Cucumber Logo"
-                class="skill-logo"
-              />
-            </article>
-            <article>
-              <img
-                src="./assets/cypress-logo.png"
-                alt="Cypress Logo"
                 class="skill-logo"
               />
             </article>
@@ -285,7 +279,7 @@
             <article>
               <img
                 src="./assets/gcp-logo.png"
-                alt="Google Cloud Platform Logo"
+                alt="Google Cloud Logo"
                 class="skill-logo"
               />
             </article>
@@ -298,8 +292,7 @@
             </article>
           </div>
         </div>
-      </div>
-      <div class="about-containers">
+
         <!-- Databases & Storage -->
         <div class="details-container">
           <h2 class="experience-sub-title">Databases & Storage</h2>
@@ -314,7 +307,7 @@
             <article>
               <img
                 src="./assets/s3-logo.png"
-                alt="S3 Logo"
+                alt="Amazon S3 Logo"
                 class="skill-logo"
               />
             </article>
@@ -405,7 +398,7 @@
             <article>
               <img
                 src="./assets/monte-carlo-logo.png"
-                alt="MonteCarlo Logo"
+                alt="Monte Carlo Logo"
                 class="skill-logo"
               />
             </article>
