--- a/index.html
+++ b/index.html
@@ -78,11 +78,15 @@
     <section id="about">
       <p class="section__text__p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
-      <div class="section-container">
-        <div class="section__pic-container">
+
+      <div class="about-container">
+        <!-- Profile Image -->
+        <div class="profile-image">
           <img src="./assets/3.png" alt="Profile picture" class="about-pic" />
         </div>
-        <div class="text-container">
+
+        <!-- Introduction Text -->
+        <div class="about-text">
           <p>
             Hi there! 👋 I'm a software engineer with 5+ years of experience
             building innovative solutions in cloud and tech. I thrive on
@@ -94,39 +98,42 @@
             awesome together! 🚀✨
           </p>
         </div>
-        <div class="about-details-container">
-          <div class="about-containers">
-            <div class="details-container">
-              <img
-                src="./assets/experience.png"
-                alt="Experience icon"
-                class="icon"
-              />
-              <h3>Experience</h3>
-              <h4>5+ years</h4>
-              <p>
-                Software Engineering Co-op - Mercari US <br />
-                Cloud Developer II - Hewlett Packard Enterprise <br />
-                Systems Engineer - Tata Consultancy Services
-              </p>
-            </div>
-            <div class="details-container">
-              <img
-                src="./assets/education.png"
-                alt="Education icon"
-                class="icon"
-              />
-              <h3>Education</h3>
-              <p>
-                Master's in Computer Science - Khoury College of Computer
-                Sciences <br />
+
+        <!-- Details Section -->
+        <div class="details-grid">
+          <div class="details-card">
+            <img
+              src="./assets/experience.png"
+              alt="Experience icon"
+              class="card-icon"
+            />
+            <h3>Experience</h3>
+            <p>5+ years</p>
+            <ul>
+              <li>Software Engineering Co-op - Mercari US</li>
+              <li>Cloud Developer II - Hewlett Packard Enterprise</li>
+              <li>Systems Engineer - Tata Consultancy Services</li>
+            </ul>
+          </div>
+
+          <div class="details-card">
+            <img
+              src="./assets/education.png"
+              alt="Education icon"
+              class="card-icon"
+            />
+            <h3>Education</h3>
+            <ul>
+              <li>Master's in Computer Science - Northeastern University</li>
+              <li>
                 Bachelor's in Computer Science - Dr. Ambedkar Institute of
                 Technology
-              </p>
-            </div>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
+
       <img
         src="./assets/arrow.png"
         alt="Arrow icon"
