--- a/index.html
+++ b/index.html
@@ -80,11 +80,13 @@
       <h1 class="title">About Me</h1>
 
       <div class="about-container">
-        <!-- Profile Image -->
-        <div class="profile-image">
-          <img src="./assets/3.png" alt="Profile picture" class="about-pic" />
+        <div class="section_pic-container">
+          <img
+            src="./assets/3.png"
+            alt="Profile picture"
+            class="about-pic square-img"
+          />
         </div>
-
         <!-- Introduction Text -->
         <div class="about-text">
           <p>
