--- a/index.html
+++ b/index.html
@@ -424,91 +424,74 @@
     <section id="projects">
       <p class="section__text__p1">Here Are My Recent</p>
       <h1 class="title">Projects</h1>
-      <div class="experience-details-container">
-        <div class="about-containers">
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img src="./assets/db.png" alt="Project 1" class="project-img" />
-            </div>
-            <h2 class="experience-sub-title project-title">
-              Smart City Management System
-            </h2>
+      <div class="projects-container">
+        <!-- Project 1 -->
+        <div class="project-card">
+          <div class="project-image">
+            <img src="./assets/db.png" alt="Smart City Management System" />
+          </div>
+          <div class="project-details">
+            <h2 class="project-title">Smart City Management System</h2>
             <p>
               User-friendly Flask-based web app with SQL Server, enabling city
               administrators and citizens to manage smart city components such
               as surveillance cameras, sensors, WiFi zones, and smart signals.
-              <br /><br /><br />
               Visualization and report generation on the GUI for the smart city
               data.
             </p>
           </div>
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img src="./assets/lb.png" alt="Project 2" class="project-img" />
-            </div>
-            <h2 class="experience-sub-title project-title">
-              Load Balancer Manager
-            </h2>
+        </div>
+        <!-- Project 2 -->
+        <div class="project-card">
+          <div class="project-image">
+            <img src="./assets/lb.png" alt="Load Balancer Manager" />
+          </div>
+          <div class="project-details">
+            <h2 class="project-title">Load Balancer Manager</h2>
             <p>
               Developed a cutting-edge application on the HPE GreenLake cloud,
-              enabling external customers to effortlessly access and manage
-              their Kubernetes clusters. <br />
-              <br />
-              <br />
-              Implemented dynamic Nginx load balancer deployment, updating
-              configurations to enhance security and eliminate the need for SSH
-              credentials. <br />
+              enabling external customers to access and manage Kubernetes
+              clusters. Implemented dynamic Nginx load balancer deployment,
+              updating configurations to enhance security and eliminate the need
+              for SSH credentials.
             </p>
           </div>
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="./assets/caas.png"
-                alt="Project 3"
-                class="project-img"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title">
-              Containers as a Service on BareMetal
-            </h2>
+        </div>
+        <!-- Project 3 -->
+        <div class="project-card">
+          <div class="project-image">
+            <img
+              src="./assets/caas.png"
+              alt="Containers as a Service on BareMetal"
+            />
+          </div>
+          <div class="project-details">
+            <h2 class="project-title">Containers as a Service on BareMetal</h2>
             <p>
-              Engineered Go code for enabling users to effortlessly create,
-              delete, and scale BareMetal clusters. <br />
-              <br />
-              <br />
-              Implemented a controller that continually polled the cluster
-              status and reported updates through the GUI to the users.
+              Engineered Go code for enabling users to create, delete, and scale
+              BareMetal clusters. Implemented a controller to continually poll
+              cluster status and report updates through the GUI.
             </p>
           </div>
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="./assets/hids.png"
-                alt="Project 4"
-                class="project-img"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title">
-              Human Intruder Detection System
-            </h2>
+        </div>
+        <!-- Project 4 -->
+        <div class="project-card">
+          <div class="project-image">
+            <img
+              src="./assets/hids.png"
+              alt="Human Intruder Detection System"
+            />
+          </div>
+          <div class="project-details">
+            <h2 class="project-title">Human Intruder Detection System</h2>
             <p>
-              Designed a robust security solution to enhance safety and protect
-              sensitive areas by automatically identifying and alerting
-              authorities to unauthorized human presence. <br />
-              <br />
-              <br />
-              Installed Raspberry Pi with motion detectors and video cameras for
-              remote surveillance.
+              Designed a robust security solution to enhance safety by
+              identifying unauthorized human presence. Installed Raspberry Pi
+              with motion detectors and video cameras for remote surveillance.
             </p>
           </div>
         </div>
       </div>
-      <img
-        src="./assets/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#contact'"
-      />
     </section>
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
