--- a/index.html
+++ b/index.html
@@ -427,72 +427,72 @@
       <div class="projects-container">
         <!-- Project 1 -->
         <div class="project-card">
-          <div class="project-image">
-            <img src="./assets/db.png" alt="Smart City Management System" />
-          </div>
-          <div class="project-details">
+          <img
+            src="./assets/db.png"
+            alt="Smart City Management System"
+            class="project-img"
+          />
+          <div class="project-content">
             <h2 class="project-title">Smart City Management System</h2>
             <p>
               User-friendly Flask-based web app with SQL Server, enabling city
               administrators and citizens to manage smart city components such
               as surveillance cameras, sensors, WiFi zones, and smart signals.
-              Visualization and report generation on the GUI for the smart city
-              data.
             </p>
           </div>
         </div>
         <!-- Project 2 -->
         <div class="project-card">
-          <div class="project-image">
-            <img src="./assets/lb.png" alt="Load Balancer Manager" />
-          </div>
-          <div class="project-details">
+          <img
+            src="./assets/lb.png"
+            alt="Load Balancer Manager"
+            class="project-img"
+          />
+          <div class="project-content">
             <h2 class="project-title">Load Balancer Manager</h2>
             <p>
               Developed a cutting-edge application on the HPE GreenLake cloud,
               enabling external customers to access and manage Kubernetes
-              clusters. Implemented dynamic Nginx load balancer deployment,
-              updating configurations to enhance security and eliminate the need
-              for SSH credentials.
+              clusters. Features dynamic Nginx load balancer deployment with
+              enhanced security.
             </p>
           </div>
         </div>
         <!-- Project 3 -->
         <div class="project-card">
-          <div class="project-image">
-            <img
-              src="./assets/caas.png"
-              alt="Containers as a Service on BareMetal"
-            />
-          </div>
-          <div class="project-details">
+          <img
+            src="./assets/caas.png"
+            alt="Containers as a Service on BareMetal"
+            class="project-img"
+          />
+          <div class="project-content">
             <h2 class="project-title">Containers as a Service on BareMetal</h2>
             <p>
-              Engineered Go code for enabling users to create, delete, and scale
-              BareMetal clusters. Implemented a controller to continually poll
-              cluster status and report updates through the GUI.
+              Engineered Go code to create, delete, and scale BareMetal
+              clusters. Includes a controller that continually polls cluster
+              status and reports updates via a user-friendly GUI.
             </p>
           </div>
         </div>
         <!-- Project 4 -->
         <div class="project-card">
-          <div class="project-image">
-            <img
-              src="./assets/hids.png"
-              alt="Human Intruder Detection System"
-            />
-          </div>
-          <div class="project-details">
+          <img
+            src="./assets/hids.png"
+            alt="Human Intruder Detection System"
+            class="project-img"
+          />
+          <div class="project-content">
             <h2 class="project-title">Human Intruder Detection System</h2>
             <p>
-              Designed a robust security solution to enhance safety by
-              identifying unauthorized human presence. Installed Raspberry Pi
-              with motion detectors and video cameras for remote surveillance.
+              Designed a security solution using Raspberry Pi, motion detectors,
+              and video cameras to automatically identify unauthorized human
+              presence and alert authorities.
             </p>
           </div>
         </div>
       </div>
     </section>
+
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
       <h1 class="title">Contact Me</h1>
