--- a/index.html
+++ b/index.html
@@ -91,12 +91,9 @@
         <div class="about-text">
           <p>
             Hi there! 👋 I'm a software engineer with 5+ years of experience
-            building innovative solutions in cloud and tech. I thrive on
-            collaboration, teamwork, and staying ahead of the curve in this
-            ever-evolving field. <br />
-            Currently pursuing my Master’s in Computer Science at Northeastern
-            University, I’m passionate about learning, growing, and making an
-            impact in the world of software engineering. Let’s create something
+            building innovative solutions in cloud and tech. <br />
+            With a Bachelor's and Master’s in Computer Science, I’m passionate about learning, growing, and staying ahead of the curve in this
+            ever-evolving field. Let’s create something
             awesome together! 🚀✨
           </p>
         </div>
@@ -113,7 +110,7 @@
             <p>5+ years</p>
             <br />
             <ul>
-              <li>Software Engineering Co-op - Mercari US</li>
+              <li>Software Engineer - Mercari US</li>
               <li>Cloud Developer II - Hewlett Packard Enterprise</li>
               <li>Systems Engineer - Tata Consultancy Services</li>
             </ul>
