--- a/index.html
+++ b/index.html
@@ -91,10 +91,9 @@
         <div class="about-text">
           <p>
             Hi there! 👋 I'm a software engineer with 5+ years of experience
-            building innovative solutions in cloud and tech. <br />
-            With a Bachelor's and Master’s in Computer Science, I’m passionate about learning, growing, and staying ahead of the curve in this
-            ever-evolving field. Let’s create something
-            awesome together! 🚀✨
+            building innovative solutions in cloud and tech. With a Bachelor's and Master’s in Computer Science, I’m passionate about learning, 
+            growing, and staying ahead of the curve in this ever-evolving field. <br />
+            Let’s create something awesome together! 🚀✨
           </p>
         </div>
 
@@ -423,6 +422,73 @@
       <p class="section__text__p1">Here Are My Recent</p>
       <h1 class="title">Projects</h1>
       <div class="projects-container">
+        <!-- Project 1 -->
+        <div class="project-card">
+          <img
+            src="./assets/db.png"
+            alt="Smart City Management System"
+            class="project-img"
+          />
+          <div class="project-content">
+            <h2 class="project-title">Smart City Management System</h2>
+            <p>
+              User-friendly Flask-based web app with SQL Server, enabling city
+              administrators and citizens to manage smart city components such
+              as surveillance cameras, sensors, WiFi zones, and smart signals.
+            </p>
+          </div>
+        </div>
+        <!-- Project 2 -->
+        <div class="project-card">
+          <img
+            src="./assets/lb.png"
+            alt="Load Balancer Manager"
+            class="project-img"
+          />
+          <div class="project-content">
+            <h2 class="project-title">Load Balancer Manager</h2>
+            <p>
+              Developed a cutting-edge application on the HPE GreenLake cloud,
+              enabling external customers to access and manage Kubernetes
+              clusters. Features dynamic Nginx load balancer deployment with
+              enhanced security.
+            </p>
+          </div>
+        </div>
+        <!-- Project 3 -->
+        <div class="project-card">
+          <img
+            src="./assets/caas.png"
+            alt="Containers as a Service on BareMetal"
+            class="project-img"
+          />
+          <div class="project-content">
+            <h2 class="project-title">Containers as a Service on BareMetal</h2>
+            <p>
+              Engineered Go code to create, delete, and scale BareMetal
+              clusters. Includes a controller that continually polls cluster
+              status and reports updates via a user-friendly GUI.
+            </p>
+          </div>
+        </div>
+        <!-- Project 4 -->
+        <div class="project-card">
+          <img
+            src="./assets/hids.png"
+            alt="Human Intruder Detection System"
+            class="project-img"
+          />
+          <div class="project-content">
+            <h2 class="project-title">Human Intruder Detection System</h2>
+            <p>
+              Designed a security solution using Raspberry Pi, motion detectors,
+              and video cameras to automatically identify unauthorized human
+              presence and alert authorities.
+            </p>
+          </div>
+        </div>
+      </div>
+            <div class="projects-container">
         <!-- Project 1 -->
         <div class="project-card">
           <img
