--- a/index.html
+++ b/index.html
@@ -489,68 +489,51 @@
         </div>
       </div>
             <div class="projects-container">
-        <!-- Project 1 -->
+        <!-- Project 5 -->
         <div class="project-card">
           <img
             src="./assets/db.png"
-            alt="Smart City Management System"
+            alt="Lyric Shuffle"
             class="project-img"
           />
           <div class="project-content">
-            <h2 class="project-title">Smart City Management System</h2>
+            <h2 class="project-title">Lyric Shuffle</h2>
             <p>
-              User-friendly Flask-based web app with SQL Server, enabling city
-              administrators and citizens to manage smart city components such
-              as surveillance cameras, sensors, WiFi zones, and smart signals.
+              Developed an Android-based game app where users unscramble lyrics 
+              from popular songs across various difficulty levels and genres.Integrated a "shake to scramble" 
+              feature using motion sensors and utilized PostgreSQL and Firebase for database management.
             </p>
           </div>
         </div>
-        <!-- Project 2 -->
+        <!-- Project 6 -->
         <div class="project-card">
           <img
             src="./assets/lb.png"
-            alt="Load Balancer Manager"
+            alt="Fake Stack Overflow"
             class="project-img"
           />
           <div class="project-content">
-            <h2 class="project-title">Load Balancer Manager</h2>
+            <h2 class="project-title">Fake Stack Overflow</h2>
             <p>
-              Developed a cutting-edge application on the HPE GreenLake cloud,
-              enabling external customers to access and manage Kubernetes
-              clusters. Features dynamic Nginx load balancer deployment with
-              enhanced security.
+              Built a Stack Overflow Clone using React and Material UI, replicating core functionalities like question posting, answering, and voting. 
+              Implemented a dynamic tagging system, a comprehensive search feature, and a clean, responsive UI using Material UI components. 
+              The project delivers a user-friendly platform for knowledge sharing and technical discussions.
             </p>
           </div>
         </div>
-        <!-- Project 3 -->
+        <!-- Project 7 -->
         <div class="project-card">
           <img
             src="./assets/caas.png"
-            alt="Containers as a Service on BareMetal"
+            alt="SMS Offer Notifications for Buyers & Sellers"
             class="project-img"
           />
           <div class="project-content">
-            <h2 class="project-title">Containers as a Service on BareMetal</h2>
+            <h2 class="project-title">SMS Offer Notifications for Buyers & Sellers</h2>
             <p>
-              Engineered Go code to create, delete, and scale BareMetal
-              clusters. Includes a controller that continually polls cluster
-              status and reports updates via a user-friendly GUI.
-            </p>
-          </div>
-        </div>
-        <!-- Project 4 -->
-        <div class="project-card">
-          <img
-            src="./assets/hids.png"
-            alt="Human Intruder Detection System"
-            class="project-img"
-          />
-          <div class="project-content">
-            <h2 class="project-title">Human Intruder Detection System</h2>
-            <p>
-              Designed a security solution using Raspberry Pi, motion detectors,
-              and video cameras to automatically identify unauthorized human
-              presence and alert authorities.
+              Implemented an SMS toggle feature in Mercari's settings to allow users to opt in for offer notifications via SMS. 
+              Developed a robust delivery system using PHP and Go, ensuring seamless SMS delivery through Braze with 
+              Twilio as a fallback during outages for uninterrupted service.
             </p>
           </div>
         </div>
